[package]
name = "repro-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
local-ip-address = "0.6.3"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
criterion = { version = "0.5", features = ["async", "async_tokio"] }

[[bench]]
name = "my_benchmark"
harness = false
