[package]
name = "repro-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
local-ip-address = "0.6.3"
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async", "async_tokio"] }

[[bench]]
name = "my_benchmark"
harness = false
